--- a/Todo_List_App/app/src/main/res/layout/card_layout.xml
+++ b/Todo_List_App/app/src/main/res/layout/card_layout.xml
@@ -5,23 +5,45 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    app:cardElevation="10dp">
+    app:cardBackgroundColor="#FFEB3B"
+    app:cardCornerRadius="25dp"
+    app:cardElevation="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="16dp">
 
-        <TextView
-            android:id="@+id/tvNome"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:textColor="#000000"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            tools:text="Nome da Tarefa" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvNome"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:textColor="#000000"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                tools:text="Nome da Tarefa" />
+
+            <ImageView
+                android:id="@+id/imgEdit"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_marginLeft="20dp"
+                app:srcCompat="@drawable/ic_baseline_edit_24" />
+
+            <ImageView
+                android:id="@+id/imgDeletar"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                app:srcCompat="@drawable/ic_baseline_delete_24" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tvDescricao"
@@ -68,11 +90,5 @@
             android:textSize="24sp"
             tools:text="Categoria" />
 
-        <Button
-            android:id="@+id/btDelete"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="Deletar Tarefa" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
