--- a/Todo_List_App/app/src/main/res/layout/fragment_list.xml
+++ b/Todo_List_App/app/src/main/res/layout/fragment_list.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListFragment" >
+    android:background="#037A76"
+    tools:context=".ListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerTarefa"
@@ -13,18 +14,22 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/card_layout" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingAdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
+        android:layout_width="73dp"
+        android:layout_height="82dp"
         android:layout_marginBottom="32dp"
         android:clickable="true"
         android:src="@drawable/ic_baseline_add_24"
+        app:backgroundTint="#12BFAF"
+        app:fabCustomSize="72dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:maxImageSize="50dp"
         tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
